complete homework 06 bugfix 01