@@ -14,10 +14,10 @@ import ru.otus.asamofalov.hw06.repository.BookCommentRepository;
 import ru.otus.asamofalov.hw06.repository.BookRepository;
 import ru.otus.asamofalov.hw06.repository.GenreRepository;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
@@ -44,7 +44,7 @@ class BookServiceImplTest {
     @DisplayName("..check for collection not empty")
     void shouldReturnCollectionWithMyBook() {
         Book book = new Book("title", new Author("author"), new Genre("genre"));
-        when(bookRepository.getAll()).thenReturn(new FormattedList<>(Arrays.asList(book)));
+        when(bookRepository.getAll()).thenReturn(new FormattedList<>(List.of(book)));
         BookService bookService = new BookServiceImpl(bookRepository, authorRepository, genreRepository, bookCommentRepository);
         assertNotEquals(0, bookService.getAll().size());
     }
@@ -53,7 +53,7 @@ class BookServiceImplTest {
     @DisplayName("..check for book appended")
     void shouldReturnCorrectAppendAnswer() {
         BookService bookService = new BookServiceImpl(bookRepository, authorRepository, genreRepository, bookCommentRepository);
-        when(bookRepository.appendBook(any())).thenReturn(new Book("", new Author(""), new Genre("")));
+        when(bookRepository.append(any())).thenReturn(new Book("", new Author(""), new Genre("")));
         assertNotNull(bookService.appendBook("", "", ""));
     }
 
@@ -61,7 +61,7 @@ class BookServiceImplTest {
     @DisplayName("..check for my book found")
     void shouldReturnMyBook() {
         var book = new Book("title", new Author("author"), new Genre("genre"));
-        when(bookRepository.getBook(anyLong())).thenReturn(book);
+        when(bookRepository.getById(anyLong())).thenReturn(book);
         BookService bookService = new BookServiceImpl(bookRepository, authorRepository, genreRepository, bookCommentRepository);
         var found = bookService.getBook(1L);
         assertThat(found).isNotNull().usingRecursiveComparison().isEqualTo(book);
@@ -71,8 +71,8 @@ class BookServiceImplTest {
     @DisplayName("..check for book updated")
     void shouldReturnCorrectUpdateAnswer() {
         var book = new Book("newtitle", new Author("author"), new Genre("genre"));
-        when(bookRepository.getBook(anyLong())).thenReturn(book);
-        when(bookRepository.updateBook(any())).thenReturn(book);
+        when(bookRepository.getById(anyLong())).thenReturn(book);
+        when(bookRepository.update(any())).thenReturn(book);
         BookService bookService = new BookServiceImpl(bookRepository, authorRepository, genreRepository, bookCommentRepository);
         var updated = bookService.updateBook(1L, "newtitle");
         assertThat(updated).isNotNull().usingRecursiveComparison().isEqualTo(book);
@@ -82,7 +82,7 @@ class BookServiceImplTest {
     @DisplayName("..check for book deleted")
     void shouldReturnCorrectDeleteAnswer() {
         var book = new Book("title", new Author("author"), new Genre("genre"));
-        when(bookRepository.getBook(anyLong())).thenReturn(book);
+        when(bookRepository.getById(anyLong())).thenReturn(book);
         BookService bookService = new BookServiceImpl(bookRepository, authorRepository, genreRepository, bookCommentRepository);
         bookService.deleteBook(1L);
     }
@@ -91,7 +91,7 @@ class BookServiceImplTest {
     @DisplayName("..check for author exists in collection")
     void shouldReturnCollectionWithMyAuthor() {
         Author author = new Author("author");
-        when(authorRepository.getAll()).thenReturn(new FormattedList<>(List.of(author)));
+        when(authorRepository.getAll()).thenReturn(List.of(author));
         BookService bookService = new BookServiceImpl(bookRepository, authorRepository, genreRepository, bookCommentRepository);
         assertThat(bookService.getAllAuthors()).contains(author);
     }
@@ -108,16 +108,18 @@ class BookServiceImplTest {
     @Test
     @DisplayName("..check for comments exists")
     void shouldReturnAllCommentForBook() {
-        BookComment bookComment = new BookComment("comment", new Book("title", new Author("author"), new Genre("genre")));
-        when(bookCommentRepository.getByBookId(anyLong())).thenReturn(new FormattedList<>(List.of(bookComment)));
         BookService bookService = new BookServiceImpl(bookRepository, authorRepository, genreRepository, bookCommentRepository);
-        assertThat(bookService.getAllComments(1L)).contains(bookComment);
+        Book book = new Book("title", new Author("author"), new Genre("genre"));
+        book.getComments().add(new BookComment("comment1", 0));
+        book.getComments().add(new BookComment("comment2", 0));
+        when(bookRepository.getById(anyLong())).thenReturn(book);
+        assertEquals(2, bookService.getAllComments(0).size());
     }
 
     @Test
     @DisplayName("..check for comment")
     void shouldReturnCommentForBook() {
-        BookComment bookComment = new BookComment("comment", new Book("title", new Author("author"), new Genre("genre")));
+        BookComment bookComment = new BookComment("any comment", 0);
         when(bookCommentRepository.getById(anyLong())).thenReturn(bookComment);
         BookService bookService = new BookServiceImpl(bookRepository, authorRepository, genreRepository, bookCommentRepository);
         assertThat(bookService.getComment(1L)).isNotNull().usingRecursiveComparison().isEqualTo(bookComment);
@@ -126,29 +128,26 @@ class BookServiceImplTest {
     @Test
     @DisplayName("..check for comment appended")
     void shouldAppendCommentToBook() {
-        BookComment bookComment = new BookComment("comment", new Book("title", new Author("author"), new Genre("genre")));
-        when(bookRepository.getBook(anyLong())).thenReturn(new Book("title", new Author("author"), new Genre("genre")));
-        when(bookCommentRepository.appendComment(any())).thenReturn(bookComment);
+        BookComment bookComment = new BookComment("comment", 0);
+        when(bookCommentRepository.append(any())).thenReturn(bookComment);
         BookService bookService = new BookServiceImpl(bookRepository, authorRepository, genreRepository, bookCommentRepository);
-        assertThat(bookService.appendComment(1L, "comment")).isNotNull().usingRecursiveComparison().isEqualTo(bookComment);
-    }
-
-    @Test
-    @DisplayName("..check for comment deleted")
-    void shouldDeleteCommentForBook() {
-        when(bookRepository.getBook(anyLong())).thenReturn(new Book("title", new Author("author"), new Genre("genre")));
-        BookService bookService = new BookServiceImpl(bookRepository, authorRepository, genreRepository, bookCommentRepository);
-        bookService.deleteComment(1L);
+        assertThat(bookService.appendComment(0, "comment")).isNotNull().usingRecursiveComparison().isEqualTo(bookComment);
     }
 
     @Test
     @DisplayName("..check for comment updated")
     void shouldUpdateCommentToBook() {
-        BookComment bookComment = new BookComment("comment", new Book("title", new Author("author"), new Genre("genre")));
+        BookComment bookComment = new BookComment("comment", 0);
         when(bookCommentRepository.getById(anyLong())).thenReturn(bookComment);
-        when(bookCommentRepository.updateComment(any())).thenReturn(bookComment);
+        when(bookCommentRepository.update(any())).thenReturn(bookComment);
         BookService bookService = new BookServiceImpl(bookRepository, authorRepository, genreRepository, bookCommentRepository);
-        assertThat(bookService.updateComment(1L, "comment")).isNotNull().usingRecursiveComparison().isEqualTo(bookComment);
+        assertThat(bookService.updateComment(0, "comment")).isNotNull().usingRecursiveComparison().isEqualTo(bookComment);
     }
 
+    @Test
+    @DisplayName("..check for comment deleted")
+    void shouldDeleteCommentForBook() {
+        BookService bookService = new BookServiceImpl(bookRepository, authorRepository, genreRepository, bookCommentRepository);
+        bookService.deleteComment(1L);
+    }
 }
